--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "colorthief": "^2.6.0",
-    "cookies-next": "^6.1.0",
+    "cookies-next": "^4.3.0",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "embla-carousel-react": "^8.6.0",
@@ -101,11 +101,14 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "@types/colorthief": "^2.6.0",
+    "@types/command-line-args": "^5.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18",
     "@types/react-tag-input": "^6.6.6",
+    "@types/stylis": "^4.2.7",
+    "@types/trusted-types": "^2.0.7",
     "babel": "^5.8.38",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.31",
